--- a/public/manifest.json
+++ b/public/manifest.json
@@ -33,32 +33,32 @@
   "id": "OctaveGoldOfficial",
   "icons": [
     {
-      "src": "/images/android-chrome-512x512.png",
+      "src": "/W/music/images/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/images/android-chrome-192x192.png",
+      "src": "/W/music/images/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/images/apple-touch-icon.png",
+      "src": "/W/music/images/apple-touch-icon.png",
       "sizes": "180x180",
       "type": "image/png"
     },
     {
-      "src": "/images/favicon-32x32.png",
+      "src": "/W/music/images/favicon-32x32.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "/images/favicon-16x16.png",
+      "src": "/W/music/images/favicon-16x16.png",
       "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "/images/favicon.ico",
+      "src": "/W/music/images/favicon.ico",
       "sizes": "48x48",
       "type": "image/x-icon"
     }
