--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "react-responsive": "^10.0.1",
     "react-toastify": "^11.0.5",
     "react-web-bluetooth": "^1.0.0",
+    "simple-peer": "^9.11.1",
     "simplebar": "^6.3.0",
     "simplebar-core": "^1.3.0",
     "simplebar-react": "^3.3.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
